# Suyven

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.gpu  LLM_EVAL.md  Makefile  README.md  ROADMAP_V2.md  SECURITY.md  api.py  eval_llm.py  pyproject.toml  requirements.txt  validate_v2_1.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
benchmarks/: bench.py  benchmark.py  benchmark_reranker.py  validate_quality.py  validate_reranker.py  validate_v2_1.py
data/self_improve/sandbox/_backups/: train.py  trainer.py
finetune/: config.py  data_gen.py  data_gen_selfsup.py  dataset.py  evaluate.py  lora.py  train.py
kaizen front/src/: App.jsx  index.css
rag/: orchestrator.py
src/suyven_rag/: api.py  app.py  ingest.py  query.py
src/suyven_rag/finetune/: __init__.py  ab_test.py  config.py  data_gen.py  data_gen_selfsup.py  data_gen_v2.py  domain_finetune.py  entity_pairs.py  eval_suite.py  evaluate.py  experiment.py  intrinsic_eval.py  lora.py  optimizations.py  train_config.yaml
src/suyven_rag/rag/: agents.py  bench_metrics.py  bench_types.py  config.py  domain_registry.py  eval.py  gap_tracker.py  index_registry.py  llm.py  loader.py  model_registry.py  observability.py  orchestrator.py  security.py  self_improve.py  vector_store.py
tests/: test_agents.py  test_bench_metrics.py  test_config.py  test_domain_finetune.py  test_eval.py  test_index_registry.py  test_lora.py  test_model_registry.py  test_observability.py  test_orchestrator.py  test_security.py
