[project]
name = "suyven-rag"
version = "0.1.0"
description = "GPU-first RAG engine — the knowledge base that adapts to anything."
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Angela Arroyo Arellano", email = "angela@suyven.com" }]
dependencies = [
    "chromadb>=1.5",
    "sentence-transformers>=5.0",
    "torch>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pynvml>=13.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "pymupdf>=1.24.0",
    "streamlit>=1.40.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ─────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["suyven_rag"]

# ── Pytest ───────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ── Coverage ─────────────────────────────────
[tool.coverage.run]
source = ["src/suyven_rag"]
omit = ["tests/*", "benchmarks/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
